--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,13 +30,13 @@
         <!-- Botones de Accion -->
         <div>
           <div class="contenedor-item-menu">
-            <ion-button (click)="onClick()" fill="outline" class="text-white border-white text-capitalize size-boton">
+            <ion-button (click)="goUpdateProfile()" fill="outline" class="text-white border-white text-capitalize size-boton">
               <ion-icon slot="start" src="/assets/icon/update_date.svg"></ion-icon>
               Actualizar datos
             </ion-button>
           </div>
           <div class="contenedor-item-menu">            
-            <ion-button (click)="onClick()" fill="outline" class="text-white border-white text-capitalize size-boton">             
+            <ion-button (click)="gotoDirecction()" fill="outline" class="text-white border-white text-capitalize size-boton">             
                 <ion-icon src="/assets/icon/ubication.svg"></ion-icon>             
               Ubicación
             </ion-button>
