--- a/src/app/consumidor/tab_agricultoras/detalles-producto/detalles-producto.page.html
+++ b/src/app/consumidor/tab_agricultoras/detalles-producto/detalles-producto.page.html
@@ -63,9 +63,9 @@
           <ion-row>
             <ion-col>
               <ion-item lines="none">
-                <div class="text-bold text-color-purple">medida 1{{measure}}</div>
+                <div class="text-bold text-color-purple">{{measure}}</div>
                 <!-- <ion-label>{{measure}}</ion-label> -->
-                <ion-radio slot="start" value="griff"></ion-radio>
+               
               </ion-item>
             </ion-col>
           </ion-row>
@@ -81,7 +81,7 @@
         <ion-card-title class="text-white text-bold">Descripción</ion-card-title>
       </ion-card-header>
       <ion-card-content class="descripcion-card">
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, provident totam obcaecati quasi corrupti in.</div>
+        <div>{{description}}</div>
       </ion-card-content>
     </ion-card>
   </div>
