--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.html
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.html
@@ -10,14 +10,14 @@
   
   <div class="contenedortotal">
     <div class="total text-white text-bold">Total</div>
-    <div class="text-color-purple text-bold precio">$ 0.00</div>
+    <div class="text-color-purple text-bold precio">{{total}}</div>
   </div>
 
   <div class="contenedor-list-ventas" id="contenedor-list-ventas">
     <ion-card class="contenedor-card-p">
       <ion-card-header class="encabezado-card">
-        <ion-card-title class="text-white text-bold">Product farmer</ion-card-title>
-        <ion-card-subtitle class="text-white">Producto-phone</ion-card-subtitle>
+        <ion-card-title class="text-white text-bold">{{farmer}}</ion-card-title>
+        <ion-card-subtitle class="text-white">{{phone}}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content class="descripcion-card">
         <ion-list>
@@ -27,18 +27,19 @@
               <img src="assets/img/lechuga.jpg" />
             </ion-thumbnail>
             <ion-label>
-              <div class="text-bold text-color-purple">nombre de producto</div>
+              <div class="text-bold text-color-purple">{{product.productName}}</div>
               <!-- <h3>{{product.productName}}</h3> -->
               <ion-grid>
                 <ion-row>
                   <ion-col>
-                    <div class="text-color-purple">product measure</div>
+                    <div class="text-color-purple">{{product.measure}}</div>
                     <!-- <p>product measure</p> -->
                     <!-- <p>{{product.measure}}</p> -->
                   </ion-col>
                   <ion-col class="text-color-purple text-bold" style="text-align: right;">
-                    precio
+                    {{product.price}}
                   </ion-col>
+                  <ion-chip (click)="deleteProduct(product)">-</ion-chip>
                   <!-- <ion-col style="text-align: right;">
                 {{product.price}}
               </ion-col> -->
@@ -50,20 +51,77 @@
       </ion-card-content>
     </ion-card>
     <!-- Calendario -->
-    <div class="ion-padding" style="text-align:center;">
-      <ion-label class="text-color-purple text-bold">Selecciona la fecha de entrega:</ion-label>
-      <ion-datetime-button style="text-align: left; margin-top: 10px;" datetime="datetime"></ion-datetime-button>
-    </div>
+  
   </div>
   <!--  -->
   <div class="btn-ordenar">
-    <ion-button (click)="createOrder()" class="boton-warmi-in"><ion-icon name="card-outline"></ion-icon> &nbsp; &nbsp;Ordenar</ion-button>
+    
+    <ion-button class="boton-warmi-in" id="open-modal" expand="block">Confirme canasta de compras</ion-button>
   </div>
   
   <!--  -->
-  <ion-modal [keepContentsMounted]="true">
+
+
+
+  <ion-modal #modal trigger="open-modal" [presentingElement]="presentingElement">
     <ng-template>
-      <ion-datetime  [(ngModel)]="deliverDate" presentation="date" id="datetime"></ion-datetime>
+      <ion-header>
+        <ion-toolbar>
+        
+          <ion-buttons slot="end">
+            <ion-button (click)="modal.dismiss()">Cancelar</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      
+      <div class="border-top-page">
+        <!-- Contenedor 1 -->
+        <div class="contenedor-header">
+          <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+          </ion-icon>
+          <div class="texto-header">Carrito de compra</div>
+        </div>
+      </div>
+      <ion-content>
+          <br>
+          <h4 class="text-center size-text35px text-bold text-color-purple">Selecciona el lugar de entrega</h4>
+          <form>
+        <ion-list>
+          
+              <ion-radio-group [(ngModel)]="place_delivery" name="place_delivery" mode="ios" value="Recogida en punto de venta">
+                <ion-item>
+                  <ion-label>Recogida en punto de venta</ion-label>
+                  <ion-radio slot="end" value="Recogida en punto de venta"></ion-radio>
+                </ion-item>
+            
+                <ion-item>
+                  <ion-label>Entrega en domicilio</ion-label>
+                  <ion-radio slot="end" value="Entrega en domicilio"></ion-radio>
+                </ion-item>
+            
+                <ion-item>
+                  <ion-label>Recogida en el huerto</ion-label>
+                  <ion-radio slot="end" value="Recogida en el huerto"></ion-radio>
+                </ion-item>
+    
+              </ion-radio-group>
+    
+          <ion-item>
+            <div class="ion-padding" style="text-align:center;">
+              <ion-label class="text-color-purple text-bold">Selecciona la fecha y hora de entrega:</ion-label>
+              <ion-datetime [(ngModel)]="deliverDate" name="deliverDate" minuteValues="0,15,30,45" hourValues="8,9,10,11,12,13,14,15,16">
+                <span slot="time-label">Hora</span>
+              </ion-datetime>
+            </div>
+          </ion-item>
+
+        </ion-list>   
+
+          <ion-button type="submit" (click)="createOrder()" expand="block" class="boton-warmi-in"><ion-icon name="card-outline"></ion-icon> &nbsp; &nbsp;Ordenar</ion-button>
+        
+      </form>
+      </ion-content>
     </ng-template>
   </ion-modal>
+
 </ion-content>
