--- a/src/app/consumidor/tab_inicio/inicio/inicio.page.html
+++ b/src/app/consumidor/tab_inicio/inicio/inicio.page.html
@@ -17,7 +17,7 @@
     <!-- Contenedor 2 -->
     <div class="contenedor-title">
       <div>        
-        <h4 class="text-center size-text35px text-bold text-color-purple">Selecciona el lugar</h4>
+        <h4 class="text-center size-text35px text-bold text-color-purple">Huertos y puntos de venta</h4>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@
       <ion-label class="color-text-purple bold-text">Seleccionaaa el lugar</ion-label> 
     </ion-col>
     <ion-col> -->      
-      <ion-item lines="none" class="input-border-bot item-native-transparency">
+    <!--   <ion-item lines="none" class="input-border-bot item-native-transparency">
         <ion-label style=" color: var(--warmin-color-purple);" position="floating" class="texto-center text-bold">
           Tipo de Usuario </ion-label>
           <ion-select interface="popover" class="border-option">
@@ -35,11 +35,11 @@
             <ion-select-option class="selec-text" value="oranges">Huertos familiares</ion-select-option>
             <ion-select-option class="selec-text" value="bananas">Ferias</ion-select-option>
           </ion-select>       
-        </ion-item>
+        </ion-item> -->
     <!-- </ion-col> -->
   <!-- </ion-row> -->
 </div>
-  <ion-card style="width: 95%; height: 70%;">
+  <ion-card style="width: 95%; height: 80%;">
     <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature] = "feature"></app-googlemaps>
   </ion-card>
 </ion-content>
