--- a/src/app/consumidor/tab_agricultoras/detalles-producto/detalles-producto.page.scss
+++ b/src/app/consumidor/tab_agricultoras/detalles-producto/detalles-producto.page.scss
@@ -1,47 +1,111 @@
-.contenedor-img{
+.contenedor-producto {
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.800);
+}
+
+.imagen-producto {
+    width: 150px;
+    height: 150px;
+    min-width: 150px;
+    min-height: 150px;
+}
+
+.imagen-producto img {
+    border-radius: 10px;
+}
+
+.descripcion-imagen {
     display: flex;
     justify-content: center;
-    margin: 4px;
-
+    align-items: center;
+    flex-direction: column;
+    margin-left: 10px;
 }
 
-.img-product {
-    border-radius: 10px;
-    width: 40%;
-    height: 40%; 
-}
-
-.contenedortotal {
-    display: flex;
+.nombre-producto {
     width: 100%;
-    height: 60px;
-    background: var(--warmin-color-orange);
-    margin-top: 5px;           
-}
-
-.total {
-    // background: yellow;
-    width: 50%;
-    height: 35px;
-    margin: 12px;
-    padding: 5px;
+    margin-bottom: 35px;
     text-align: center;
-    font-size: 20px;
 }
 
 .precio {
-    background: #fff;
-    width: 50%;
-    height: 35px;
-    margin: 12px;
-    padding: 5px;
-    text-align: center; 
-    border-radius: 20px 2px 20px 2px;
-    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--warmin-color-yellow);
+    border-radius: 10px;
+    width: 100px;
+    height: 30px;
 
 }
 
+.contenedor-descripcion {
+    display: flex;
+    width: 100%;
+}
+
+.descripcion-producto {
+    text-align: justify;
+}
+
+.contenedor-unidad {
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.titulo-label {
+    margin: 15px;
+}
+
+.contenedor-compra {
+    margin: auto;
+    padding-top: 10px;
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.800);
+    // border: 3px;
+    border-left: 10px solid var(--warmin-color-brown);
+    
+}
+
+.size-items-d {
+    width: 150px;
+    height: 80px;
+    text-align: center;
+    color: var(--warmin-color-brown);
+    font-weight: bold;
+}
+
+.valores-cantidad{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.total{
+    color: var(--warmin-color-purple);
+    margin-top: 15px;
+}
+
+.size-letter{
+font-size: 15px;
+}
+
 .btn-ordenar{
+    padding-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
