--- a/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.scss
+++ b/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.scss
@@ -27,7 +27,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-
+  margin-top: 4px;
 }
 
 .padding-profile {
@@ -48,6 +48,7 @@
   min-height: 100%;
   min-width: 100%;
   margin-inline-start: 4px;
+  border-radius: 10px;
 }
 
 .imagen-buttom {
