--- a/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
+++ b/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
@@ -4,36 +4,26 @@
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/agricultores.svg">
       </ion-icon>
-      <div class="texto-header">Agricultoras</div>      
+      <div class="texto-header">Agricultoras</div>
     </div>
   </div>
- <!--Search Bar  -->
-    <div class="container-search-bar padding-bar">
-      <div class="">
-        <ion-searchbar placeholder="Buscar" class="search-bar-orange" showCancelButton="never"></ion-searchbar>
+  <!--Search Bar  -->
+  <div class="container-search-bar padding-bar">
+    <div class="">
+      <ion-searchbar placeholder="Buscar" class="search-bar-orange" showCancelButton="never"></ion-searchbar>
+    </div>
+  </div>
+  <!-- Lista Personas -->
+  <div class="contenedor-personas">
+    <div *ngFor="let farmer of listFarmers" class="card" [routerLink]="['/consumidor/tab-inicial/perfil-ma',farmer.id]">
+      <div>
+        <img class="imagen-card" src="assets/img/MujerAgricultora1.webp" />
       </div>
-    </div>
-<!-- List of people -->
-    <div class="contenedor-perfiles">      
-      <ion-grid>
-        <ion-row>
-          <ion-col *ngFor="let farmer of listFarmers" size="6">
-            <div>
-              <ion-card class="card-p" [routerLink]="['/consumidor/tab-inicial/perfil-ma',farmer.id]">
-                <ion-card-header class="card-header">                                  
-                  <div class="avatar-center">
-                     <img class="radius" src="assets/img/comprador.jpg"/> 
-                  </div>
-                </ion-card-header>
-                <ion-card-content class="card-content">
-                  <ion-card-title class="text-white text-center">{{farmer.name}}</ion-card-title>
-                  <ion-card-subtitle class="text-white text-center">{{farmer.phone}}</ion-card-subtitle>
-                  <ion-card-subtitle class="text-white text-center">Dirección</ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-            </div>
-          </ion-col>          
-        </ion-row>
-      </ion-grid>
-    </div>
+      <div  class="detalle-personal">
+        <div class="texto-personal text-bold text-color-purple">{{farmer.name}}</div>
+        <div class="texto-personal text-color-purple">{{farmer.phone}}</div>
+        <div class="texto-personal text-color-purple">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit explicabo laborum a obcaecati, repellendus sunt!</div>
+      </div>
+    </div>  
+  </div>
 </ion-content>
