--- a/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.scss
+++ b/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.scss
@@ -1,59 +1,54 @@
-.lista-agricultoras{
-    width: 95%;
-    height: 350px;
-    border: 4px;
-    border-style: solid;
-    border-color: var(--warmin-color-orange);
-    background-color: var(--warmin-color-orange);
-}
-
-ion-searchbar.search-bar{
+ion-searchbar.search-bar {
     background: var(--warmin-color-brown);
     border-radius: 5px;
     padding: 5px;
     max-width: 300px;
 }
 
-.padding-bar{
-padding-top: 10px;
-padding-bottom: 10px;
+.padding-bar {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-.contenedor-perfiles{
-    padding: auto;
-    margin: auto;
-    // background: var(--warmin-color-pinkd);
-    align-items: center;
+.contenedor-personas {
+    width: 100%;
+    height: 90%;
+
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-self: center;
-    align-content: center;
-    border-radius: 3px;    
-    
+
 }
 
-ion-card-header.card-header{
+.card {
+    cursor: pointer;
+    margin: 5px;
+    width: 250px;
+    height: 350px;
+    border: 3px;
+}
+
+.card:hover{
     background: var(--warmin-color-yellow);
-    
+    border-radius: 25% 10% 0 0;
 }
 
-ion-card-content.card-content{
-    background: var(--warmin-color-orange);
+.imagen-card {    
+    border-radius: 25% 10%;
 }
 
-ion-card.card-p{
-    border: 5px;
-    border-style: solid;
-    border-radius: 5px;
-    border-color: #fff;
-}
-
-.radius{
- border-color: black;   
- border: 50px;
- border-radius: 50%;
-}
-
-.avatar-center{
-    display: flex; 
+.detalle-personal {
+    margin: 0;
+    width: 250px;
+    height: 180px;
+    background: rgba(255, 255, 255, 0.800);
+    display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;    
+}
+
+.texto-personal {   
+    text-align: center;
+    margin: 3px;
 }
