--- a/src/app/login/registrarse/registrarse.page.html
+++ b/src/app/login/registrarse/registrarse.page.html
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="text-center">
-          <ion-button type="submit" size="large" class="boton-warmi-in" (click)="register()">Regístrate
+          <ion-button type="submit" size="large" class="boton-warmi-in" (click)="terminos()">Regístrate
           </ion-button>
         </div>
       </form>
