--- a/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
@@ -23,13 +23,67 @@
   <!-- <ion-item-divider style="text-align: center; color: black;">
   <h4>Indica en el mapa la ubicación de la asociación</h4>
 </ion-item-divider> -->
-  <div class="container-search-bar">
-      <ion-searchbar placeholder="Buscar" class="search-bar-orange size-search-bar" showCancelButton="never"></ion-searchbar>
-  </div>
-  
-  <ion-card class="map">
-    <capacitor-google-maps #map></capacitor-google-maps>
+  <ion-card style="width: 97%; height: 70%;">
+    <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
   </ion-card>
-  <ion-button class="boton-warmi-in" expand="block" (click)="continuar()"> &nbsp; &nbsp;Continuar</ion-button>
+  <ion-button class="boton-warmi-in" id="open-modal" expand="block">Continuar</ion-button>
+  
+  <!-- Modal -->
+
+  <ion-modal #modal trigger="open-modal" [presentingElement]="presentingElement">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+        
+          <ion-buttons slot="end">
+            <ion-button (click)="modal.dismiss()">Cancelar</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      
+      <div class="border-top-page">
+        <!-- Contenedor 1 -->
+        <div class="contenedor-header">
+          <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+          </ion-icon>
+          <div class="texto-header">Asociación</div>
+        </div>
+      </div>
+      <ion-content>
+          <br>
+          <h4 class="text-center size-text35px text-bold text-color-purple">Ingresa los datos requeridos</h4>
+          <form>
+        <ion-list>
+          <ion-card>  
+            <ion-item>
+              <ion-label position="stacked">Nombre de la asociación</ion-label>
+              <ion-input [(ngModel)]="name" name="name"></ion-input>
+            </ion-item>
+          <ion-card>
+            <ion-card-title class="title">
+              Ventajas
+            </ion-card-title>
+            <ion-list class="items">
+              <ion-textarea [(ngModel)]="advantages" name="advantages"></ion-textarea>
+            </ion-list>
+          </ion-card>
+          <ion-card>
+            <ion-card-title class="title">
+              Reglas
+            </ion-card-title>
+            <ion-list class="items">
+              <ion-textarea [(ngModel)]="rules" name="rules"></ion-textarea>
+            </ion-list>
+          </ion-card>
+          </ion-card>
+
+        </ion-list>   
+
+          <ion-button type="submit" expand="block" class="boton-warmi-in" (click)="guardarAsociacion()"><ion-icon name="card-outline"></ion-icon> &nbsp; &nbsp;Ordenar</ion-button>
+        
+      </form>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 
 </ion-content>
